--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     window.$docsify = {
       loadNavbar: 'NAV.md',
       loadSidebar: 'SUMMARY.md',
-      name: 'ApacheCN C# 译文集（二）',
+      name: '飞龙的 C# 译文集（二）',
       auto2top: true,
       themeColor: '#512bd4',
-      repo: 'apachecn/apachecn-csharp-zh-pt2',
+      repo: 'opendoccn/flygon-csharp-zh-pt2',
       plugins: [window.docsPlugin],
       alias: {
         '/.*/SUMMARY.md': '/SUMMARY.md',
@@ -72,7 +72,7 @@
   <script src="asset/docsify-baidu-push.js"></script>
   <script src="asset/docsify-baidu-stat.js"></script>
   <script src="asset/docsify-cnzz.js"></script>
-  <script src="asset/docsify-apachecn-footer.js"></script>
+  
   <script src="asset/docsify-clicker.js"></script>
   <link rel="stylesheet" href="asset/docsify-quick-page.css">
   <script src="asset/docsify-quick-page.js"></script>
